dbeaver/pro#10614 Register datadam test plugin in test feature, add nullability annotations